# sp1-evm-txhash-zkp

./: .env.example  Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
